tests/bad_positioned_spread/bad_positioned_spread.exp
Error ----------------------------------------------------------------------------------------------------- test.js:3:25

number [1] is incompatible with string [2].

   test.js:3:25
   3| declare var V : { name: number };
                              ^^^^^^ [1]

References:
   test.js:6:10
   6|   name : 'good',
               ^^^^^^ [2]



Found 1 error
